--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,5 +1,3 @@
-# This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
 name: CMake on multiple platforms
 
 on:
@@ -13,15 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
-
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [Release]
@@ -47,59 +37,47 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set reusable strings
-      # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
+    - name: Set build output directory
       id: strings
       shell: bash
-      run: |
-        echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+      run: echo "build_output_dir=${{ github.workspace }}/build" >> $GITHUB_OUTPUT
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+        cmake -B "${{ steps.strings.outputs.build_output_dir }}"
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -S ${{ github.workspace }}
+        -S "${{ github.workspace }}"
 
     - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: >
+        cmake --build "${{ steps.strings.outputs.build_output_dir }}"
+        --config ${{ matrix.build_type }}
 
     - name: Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      working-directory: ${{ steps.strings.outputs.build_output_dir }}
       run: ctest --build-config ${{ matrix.build_type }}
 
-
     - name: Run Executable
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
       shell: bash
       run: |
-        # Set executable name based on OS
-        executable="hex_vals"  # Start with base executable name
-        
-        if [ "$RUNNER_OS" == "Windows" ]; then
-          executable="hex_vals.exe"  # Add .exe for Windows
-          # On Windows, we should ensure that we run in the correct directory
-          executable_path="${{ github.workspace }}\\build\\${{ matrix.build_type }}\\$executable"  # Absolute path for Windows
+        os="${{ runner.os }}"
+        build_dir="${{ steps.strings.outputs.build_output_dir }}"
+        executable="hex_vals"
+
+        if [ "$os" = "Windows" ]; then
+          executable="hex_vals.exe"
+          executable_path="$build_dir/${{ matrix.build_type }}/$executable"
         else
-          executable_path="${{ github.workspace }}/build/$executable"  # Absolute path for Linux/macOS
+          executable_path="$build_dir/$executable"
         fi
-        
-        # Check if the file exists before trying to run it
+
         echo "Checking if executable exists: $executable_path"
         if [ -f "$executable_path" ]; then
-          echo "Executable found, running it
-          if [ "$RUNNER_OS" == "Windows" ]; then
-            "$executable_path" || echo "Program crashed as expected (exit code ignored)"
-          else
-            "$executable_path" || echo "Program crashed as expected (exit code ignored)"
-          fi
+          echo "Executable found, running it (expected to crash for debug demo)"
+          "$executable_path" || echo "Program crashed as expected (exit code ignored)"
         else
           echo "Executable not found: $executable_path"
-          exit 1  # Fail if the executable isn't found
+          exit 1
         fi
